gateway/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dew-org-ingress
  labels:
    name: dew-org-ingress
spec:
  rules:
  - host: api.deworg.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: deworg-gateway
            port: 
              number: 80
